[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "torchlite"
version = "0.1.0"
description = "Lightweight PyTorch utility library for training, evaluation, and TFLite export — without the framework lock-in."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [
  { name = "Tharun K", email = "your@email.com" }
]
keywords = ["pytorch", "deep learning", "training", "tflite", "export", "ml utilities"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
  "torch>=2.0.0",
  "torchvision>=0.15.0",
  "scikit-learn>=1.3.0",
  "numpy>=1.24.0",
  "matplotlib>=3.7.0",
  "tqdm>=4.65.0",
]

[project.optional-dependencies]
export = [
  "onnx>=1.14.0",
  "onnxruntime>=1.15.0",
  "tensorflow>=2.13.0",   # needed for TFLite conversion
]
dev = [
  "pytest>=7.4.0",
  "pytest-cov>=4.1.0",
  "ruff>=0.1.0",          # linter + formatter
  "hatch>=1.7.0",
]
all = ["torchlite[export,dev]"]

[project.urls]
Homepage = "https://github.com/Tharun007-TK/torchlite"
Repository = "https://github.com/Tharun007-TK/torchlite"
Issues = "https://github.com/Tharun007-TK/torchlite/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/torchlite"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I"]   # pycodestyle + pyflakes + isort

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/torchlite --cov-report=term-missing"
