[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "torchloop"
version = "0.2.3"
description = "Lightweight PyTorch utility library for training, evaluation, and TFLite export — without the framework lock-in."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [
  { name = "Tharun Kumar", email = "tharunkumarvmt@gmail.com" }
]
keywords = ["pytorch", "deep learning", "training", "tflite", "export", "ml utilities"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
  "torch>=2.0,<2.6",
  "torchvision>=0.15.0",
  "scikit-learn>=1.0",
  "numpy>=1.20",
  "matplotlib>=3.7.0",
  "tqdm>=4.65.0",
]

[project.optional-dependencies]
edge = [
  "onnx>=1.15",
  "onnxruntime>=1.16",
  "tensorflow-lite-runtime>=2.15; platform_system != 'Darwin'",
  "coremltools>=7.0; platform_system == 'Darwin'",
]
export = [
  "onnx>=1.14.0",
  "onnxruntime>=1.15.0",
  "tensorflow>=2.13.0",   # needed for TFLite conversion
]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "black>=23.0",
  "mypy>=1.0",
  "torchinfo>=1.8",
  "ruff>=0.1.0",          # linter + formatter
  "hatch>=1.7.0",
]
all = ["torchloop[edge,export,dev]"]

[project.urls]
Homepage = "https://github.com/Tharun007-TK/torchloop"
Repository = "https://github.com/Tharun007-TK/torchloop"
Issues = "https://github.com/Tharun007-TK/torchloop/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/torchloop"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I"]   # pycodestyle + pyflakes + isort

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--cov=src/torchloop --cov-report=term-missing"
filterwarnings = [
  "ignore:AMP requested on non-CUDA.*:UserWarning",
  "ignore::DeprecationWarning",
]
